--- a/docs/Introduction-to-biostatistics-and-machine-learning.tex
+++ b/docs/Introduction-to-biostatistics-and-machine-learning.tex
@@ -41,6 +41,46 @@
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
+\usepackage{color}
+\usepackage{fancyvrb}
+\newcommand{\VerbBar}{|}
+\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
+% Add ',fontsize=\small' for more characters per line
+\usepackage{framed}
+\definecolor{shadecolor}{RGB}{248,248,248}
+\newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 \usepackage{longtable,booktabs}
 % Correct order of tables after \paragraph or \subparagraph
 \usepackage{etoolbox}
@@ -73,7 +113,7 @@
 
 \title{Introduction to biostatistics and machine learning}
 \author{Olga Dethlefsen, Eva Freyhult, Bengt Sennblad, Payam Emami}
-\date{2020-11-05}
+\date{2020-11-06}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -1814,5 +1854,345 @@ Exr. \ref{exr:m-matrix}
   -2 & 1   \\
   \frac{3}{2} & -\frac{1}{2}
 \end{bmatrix}\]
+
+\hypertarget{part-linear-models}{%
+\part{Linear Models}\label{part-linear-models}}
+
+\hypertarget{simple-linear-regression}{%
+\chapter{Simple linear regression}\label{simple-linear-regression}}
+
+\textbf{Aims}
+
+\begin{itemize}
+\tightlist
+\item
+  to introduce concept of linear models using simple linear regression
+\end{itemize}
+
+\textbf{Learning outcomes}
+
+\begin{itemize}
+\tightlist
+\item
+  to understand what a linear model is
+\item
+  to understand simple linear regression model incl.~terminology
+\item
+  to be able to state linear model in the general vector-matrix notation
+\item
+  to use the general vector-matrix notation to numerically estimate model parameters
+\end{itemize}
+
+\hypertarget{linear-regression}{%
+\section{Linear Regression}\label{linear-regression}}
+
+\begin{itemize}
+\tightlist
+\item
+  Linear regression is a simple approach for supervised learning, when numerical outcome and numerical exposure are concerned
+\item
+  The method of linear regression is used to model the statistical relationship between two variables (the outcome and the exposure)
+\item
+  In practice, it results in an estimate of the best-fitting straight line to describe the relationship, also called the association
+\end{itemize}
+
+With linear regression we can answer questions such as:
+
+\begin{itemize}
+\tightlist
+\item
+  is there a relationship between exposure and outcome, e.g.~body weight and plasma volume?
+\item
+  how strong is the relationship between the two variables?
+\item
+  what will be a predicted value of the outcome given a new set of exposure values?
+\item
+  how accurately can we predict outcome?
+\end{itemize}
+
+\hypertarget{statistical-vs.-deterministic-relationship}{%
+\section{Statistical vs.~deterministic relationship}\label{statistical-vs.-deterministic-relationship}}
+
+Relationships in probability and statistics can generally be one of three things: deterministic, random, or statistical:
+
+\begin{itemize}
+\tightlist
+\item
+  a \textbf{deterministic} relationship involves \textbf{an exact relationship} between two variables, for instance Fahrenheit and Celcius degrees is defined by an equation \(Fahrenheit=\frac{9}{5}\cdot Celcius+32\)
+\item
+  there is \textbf{no relationship} between variables in the \textbf{random relationship}, for instance number of succulents Olga buys and time of the year as Olga keeps buying succulents whenever she feels like it throughout the entire year
+\item
+  \textbf{a statistical relationship} is a \textbf{mixture of deterministic and random relationship}, e.g.~the savings that Olga has left in the bank account depend on Olga's monthly salary income (deterministic part) and the money spent on buying succulents (random part)
+\end{itemize}
+
+\begin{figure}
+
+{\centering \includegraphics{301-linear-models_files/figure-latex/regression-deterministic-1} 
+
+}
+
+\caption{Deterministic vs. statistical relationship: a) deterministic: equation exactly describes the relationship between the two variables e.g. Ferenheit and Celcius relationship ; b) statistical relationship between $x$ and $y$ is not perfect (increasing relationship), c)  statistical relationship between $x$ and $y$ is not perfect (decreasing relationship), d) random signal}\label{fig:regression-deterministic}
+\end{figure}
+
+\hypertarget{the-best-fitting-straight-line}{%
+\section{The best-fitting straight line}\label{the-best-fitting-straight-line}}
+
+Let's look at the example data containing body weight (kg) and plasma volume (liters) for eight healthy men to see what it the best-fitting straight line is.
+
+Example data:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{weight \textless{}{-}}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DecValTok{58}\NormalTok{, }\DecValTok{70}\NormalTok{, }\DecValTok{74}\NormalTok{, }\FloatTok{63.5}\NormalTok{, }\FloatTok{62.0}\NormalTok{, }\FloatTok{70.5}\NormalTok{, }\FloatTok{71.0}\NormalTok{, }\FloatTok{66.0}\NormalTok{) }\CommentTok{\# body weight (kg)}
+\NormalTok{plasma \textless{}{-}}\StringTok{ }\KeywordTok{c}\NormalTok{(}\FloatTok{2.75}\NormalTok{, }\FloatTok{2.86}\NormalTok{, }\FloatTok{3.37}\NormalTok{, }\FloatTok{2.76}\NormalTok{, }\FloatTok{2.62}\NormalTok{, }\FloatTok{3.49}\NormalTok{, }\FloatTok{3.05}\NormalTok{, }\FloatTok{3.12}\NormalTok{) }\CommentTok{\# plasma volume (liters)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{figure}
+
+{\centering \includegraphics{301-linear-models_files/figure-latex/fig-intro-example-1} 
+
+}
+
+\caption{Scatter plot of the data shows that high plasma volume tends to be associated with high weight and *vice verca*.}\label{fig:fig-intro-example}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics{301-linear-models_files/figure-latex/fig-intro-example-reg-1} 
+
+}
+
+\caption{Scatter plot of the data shows that high plasma volume tends to be associated with high weight and *vice verca*. Linear regression gives the equation of the straight line (red) that best describes how the outcome changes (increase or decreases) with a change of exposure variable}\label{fig:fig-intro-example-reg}
+\end{figure}
+
+The equation for the red line is:
+\[Y_i=0.086 +  0.044 \cdot x_i \quad for \;i = 1 \dots 8\]
+and in general:
+\[Y_i=\alpha + \beta \cdot x_i \quad for \; i = 1 \dots n\]
+
+\hypertarget{simple-linear-regression-model}{%
+\section{Simple linear regression model}\label{simple-linear-regression-model}}
+
+\begin{itemize}
+\tightlist
+\item
+  In other words, by finding the best-fitting straight line we are \textbf{building a statistical model} to represent the relationship between plasma volume (\(Y\)) and explanatory body weight variable (\(x\))
+\item
+  If were to use our model \(Y_i=0.086 + 0.044 \cdot x_i\) to find plasma volume given a weight of 58 kg (our first observation, \(i=1\)), we would notice that we would get \(Y=0.086 + 0.044 \cdot 58 = 2.638\), not exactly \(2.75\) as we have for our first man in our dataset that we started with, i.e.~\(2.75 - 2.638 = 0.112 \neq 0\).
+\item
+  We thus add to the above equation an \textbf{error term} to account for this and now we can write our regression model more formally as:
+\end{itemize}
+
+\begin{equation}
+Y_i=\alpha + \beta \cdot x_i + \epsilon_i
+\label{eq:regression-linear}
+\end{equation}
+
+\begin{itemize}
+\tightlist
+\item
+  where we call \(\alpha\) and \(\beta\) \textbf{model coefficients}
+\item
+  where we call \(\epsilon_i\) \textbf{error terms}
+\end{itemize}
+
+\hypertarget{least-squares}{%
+\section{Least squares}\label{least-squares}}
+
+\begin{itemize}
+\tightlist
+\item
+  in the above body weight - plasma volume example, the values of \(\alpha\) and \(\beta\) have just appeared
+\item
+  in practice, \(\alpha\) and \(\beta\) values are unknown and we use data to estimate these coefficients, noting the estimates with a hat, \(\hat{\alpha}\) and \(\hat{\beta}\)
+\item
+  \textbf{least squares} is one of the methods of parameters estimation, i.e.~finding \(\hat{\alpha}\) and \(\hat{\beta}\)
+\end{itemize}
+
+\begin{figure}
+
+{\centering \includegraphics{301-linear-models_files/figure-latex/regression-errors-1} 
+
+}
+
+\caption{Scatter plot of the data shows that high plasma volume tends to be associated with high weight and *vice verca*. Linear regrssion gives the equation of the straight line (red) that best describes how the outcome changes with a change of exposure variable. Blue lines represent error terms, the vertical distances to the regression line}\label{fig:regression-errors}
+\end{figure}
+
+~\\
+Let \(\hat{y_i}=\hat{\alpha} + \hat{\beta}x_i\) be the prediction \(y_i\) based on the \(i\)-th value of \(x\):
+
+\begin{itemize}
+\tightlist
+\item
+  Then \(\epsilon_i = y_i - \hat{y_i}\) represents the \(i\)-th \textbf{residual}, i.e.~the difference between the \(i\)-th observed response value and the \(i\)-th response value that is predicted by the linear model
+\item
+  RSS, the \textbf{residual sum of squares} is defined as: \[RSS = \epsilon_1^2 + \epsilon_2^2 + \dots + \epsilon_n^2\] or
+  equivalently as: \[RSS=(y_1-\hat{\alpha}-\hat{\beta}x_1)^2+(y_2-\hat{\alpha}-\hat{\beta}x_2)^2+...+(y_n-\hat{\alpha}-\hat{\beta}x_n)^2\]
+\item
+  the least squares approach chooses \(\hat{\alpha}\) and \(\hat{\beta}\) \textbf{to minimize the RSS}. With some calculus we get:
+\end{itemize}
+
+~\\
+\begin{theorem}[Least squares estimates for a simple linear regression]
+\protect\hypertarget{thm:unnamed-chunk-2}{}{\label{thm:unnamed-chunk-2} \iffalse (Least squares estimates for a simple linear regression) \fi{} }
+\[\hat{\beta} = \frac{S_{xy}}{S_{xx}}\]
+\[\hat{\alpha} = \bar{y}-\frac{S_{xy}}{S_{xx}}\cdot \bar{x}\]
+
+where:
+
+\begin{itemize}
+\tightlist
+\item
+  \(\bar{x}\): mean value of \(x\)
+\item
+  \(\bar{y}\): mean value of \(y\)
+\item
+  \(S{xx}\): sum of squares of \(X\) defined as \(S_{xx} = \displaystyle \sum_{i=1}^{n}(x_i-\bar{x})^2\)
+\item
+  \(S{yy}\): sum of squares of \(Y\) defined as \(S_{yy} = \displaystyle \sum_{i=1}^{n}(y_i-\bar{y})^2\)
+\item
+  \(S{xy}\): sum of products of \(X\) and \(Y\) defined as \(S_{xy} = \displaystyle \sum_{i=1}^{n}(x_i-\bar{x})(y_i-\bar{y})\)
+\end{itemize}
+\end{theorem}
+
+We can further re-write the above sum of squares to obtain
+
+\begin{itemize}
+\tightlist
+\item
+  sum of squares of \(X\), \[S_{xx} = \displaystyle \sum_{i=1}^{n}(x_i-\bar{x})^2 = \sum_{i=1}^{n}x_i^2-\frac{(\sum_{i=1}^{n}x_i)^2}{n})\]
+\item
+  sum of products of \(X\) and \(Y\)
+\end{itemize}
+
+\[S_{xy} = \displaystyle \sum_{i=1}^{n}(x_i-\bar{x})(y_i-\bar{y})=\sum_{i=1}^nx_iy_i-\frac{\sum_{i=1}^{n}x_i\sum_{i=1}^{n}y_i}{n}\]
+
+\hypertarget{example}{%
+\subsubsection{Example}\label{example}}
+
+Let's try least squares method to find coefficient estimates in our body weight and plasma volume example
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# initial data}
+\NormalTok{weight \textless{}{-}}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DecValTok{58}\NormalTok{, }\DecValTok{70}\NormalTok{, }\DecValTok{74}\NormalTok{, }\FloatTok{63.5}\NormalTok{, }\FloatTok{62.0}\NormalTok{, }\FloatTok{70.5}\NormalTok{, }\FloatTok{71.0}\NormalTok{, }\FloatTok{66.0}\NormalTok{) }\CommentTok{\# body weight (kg)}
+\NormalTok{plasma \textless{}{-}}\StringTok{ }\KeywordTok{c}\NormalTok{(}\FloatTok{2.75}\NormalTok{, }\FloatTok{2.86}\NormalTok{, }\FloatTok{3.37}\NormalTok{, }\FloatTok{2.76}\NormalTok{, }\FloatTok{2.62}\NormalTok{, }\FloatTok{3.49}\NormalTok{, }\FloatTok{3.05}\NormalTok{, }\FloatTok{3.12}\NormalTok{) }\CommentTok{\# plasma volume (liters)}
+
+\CommentTok{\# rename variables for convenience}
+\NormalTok{x \textless{}{-}}\StringTok{ }\NormalTok{weight}
+\NormalTok{y \textless{}{-}}\StringTok{ }\NormalTok{plasma}
+
+\CommentTok{\# mean values of x and y}
+\NormalTok{x.bar \textless{}{-}}\StringTok{ }\KeywordTok{mean}\NormalTok{(x)}
+\NormalTok{y.bar \textless{}{-}}\StringTok{ }\KeywordTok{mean}\NormalTok{(y)}
+
+\CommentTok{\# Sum of squares}
+\NormalTok{Sxx \textless{}{-}}\StringTok{  }\KeywordTok{sum}\NormalTok{((x }\OperatorTok{{-}}\StringTok{ }\NormalTok{x.bar)}\OperatorTok{\^{}}\DecValTok{2}\NormalTok{)}
+\NormalTok{Sxy \textless{}{-}}\StringTok{ }\KeywordTok{sum}\NormalTok{((x}\OperatorTok{{-}}\NormalTok{x.bar)}\OperatorTok{*}\NormalTok{(y}\OperatorTok{{-}}\NormalTok{y.bar))}
+
+\CommentTok{\# Coefficient estimates}
+\NormalTok{beta.hat \textless{}{-}}\StringTok{ }\NormalTok{Sxy }\OperatorTok{/}\StringTok{ }\NormalTok{Sxx}
+\NormalTok{alpha.hat \textless{}{-}}\StringTok{ }\NormalTok{y.bar }\OperatorTok{{-}}\StringTok{ }\NormalTok{Sxy}\OperatorTok{/}\NormalTok{Sxx}\OperatorTok{*}\NormalTok{x.bar}
+
+\CommentTok{\# Print estimated coefficients alpha and beta}
+\KeywordTok{print}\NormalTok{(alpha.hat)}
+\CommentTok{\#\# [1] 0.08572428}
+\KeywordTok{print}\NormalTok{(beta.hat)}
+\CommentTok{\#\# [1] 0.04361534}
+\end{Highlighting}
+\end{Shaded}
+
+In R we can use \texttt{lm}, the built-in function, to fit a linear regression model and we can replace the above code with one line
+
+\begin{Shaded}
+\begin{Highlighting}[]
+
+\KeywordTok{lm}\NormalTok{(plasma }\OperatorTok{\textasciitilde{}}\StringTok{ }\NormalTok{weight)}
+\CommentTok{\#\# }
+\CommentTok{\#\# Call:}
+\CommentTok{\#\# lm(formula = plasma \textasciitilde{} weight)}
+\CommentTok{\#\# }
+\CommentTok{\#\# Coefficients:}
+\CommentTok{\#\# (Intercept)       weight  }
+\CommentTok{\#\#     0.08572      0.04362}
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{interpreting-regression-coefficients}{%
+\chapter{Interpreting regression coefficients}\label{interpreting-regression-coefficients}}
+
+\textbf{Aims}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
+
+\textbf{Learning outcomes}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
+
+\hypertarget{model-assumptions}{%
+\chapter{Model assumptions}\label{model-assumptions}}
+
+\textbf{Aims}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
+
+\textbf{Learning outcomes}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
+
+\hypertarget{generalized-linear-models}{%
+\chapter{Generalized linear models}\label{generalized-linear-models}}
+
+\textbf{Aims}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
+
+\textbf{Learning outcomes}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
+
+\hypertarget{linear-mixed-models}{%
+\chapter{Linear Mixed Models}\label{linear-mixed-models}}
+
+\textbf{Aims}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
+
+\textbf{Learning outcomes}
+
+\begin{itemize}
+\tightlist
+\item
+  xxx
+\end{itemize}
 
 \end{document}
