--- a/301-linear-models.Rmd
+++ b/301-linear-models.Rmd
@@ -1,6 +1,6 @@
 # (PART) Linear Models {-}
 
-# Simple linear regression
+# Introduction to linear models 
 
 **Aims**
 
@@ -228,4 +228,33 @@ In R we can use `lm`, the built-in function,  to fit a linear regression model a
 lm(plasma ~ weight)
 
 ```
+
+
+--------
+
+## Exercises: linear models I
+
+```{exercise, "lm-recognize"}
+Which of the following models are linear models and why?
+$Y_i=\alpha + \beta x_i + \epsilon_i$
+$Y_i=\beta_0 + \beta_1 x_{i,1} + \beta_2 x_{i,2} + \epsilon_i$
+$Y_i=\alpha + \beta x_i + \gamma x_i^2 + \epsilon_i$
+$Y_i=\alpha + \gamma x_i^\beta + \epsilon_i$
+```
+
+```{exercise, "lm-calculus"}
+
+
+
+```
+
+
+```{r}
+
+
+```
+
+
+
+
 
