--- a/docs/Introduction-to-biostatistics-and-machine-learning.tex
+++ b/docs/Introduction-to-biostatistics-and-machine-learning.tex
@@ -113,7 +113,7 @@
 
 \title{Introduction to biostatistics and machine learning}
 \author{Olga Dethlefsen, Eva Freyhult, Bengt Sennblad, Payam Emami}
-\date{2020-11-06}
+\date{2020-11-09}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -141,7 +141,7 @@
 \chapter*{Preface}\label{preface}}
 \addcontentsline{toc}{chapter}{Preface}
 
-This ``bookdown'' book contains teaching and learning materials prepared and used during ``Introduction to biostatistics and machine learning'' course organised by NBIS, National Bioinformatics Infrastructure Sweden. The course is open for PhD students, postdoctoral researcher and other employees in need of biostatistical skills within Swedish universities. The materials are geared towards life scientists wanting to be able to understand and use basic statistical and machine learning methods. It may also suits those already applying biostatistical methods but who have never gotten a chance to reflect on the basic statistical concepts, such as the commonly misinterpreted p-value.
+This ``bookdown'' book contains teaching and learning materials prepared and used during ``Introduction to biostatistics and machine learning'' course organized by NBIS, National Bioinformatics Infrastructure Sweden. The course is open for PhD students, postdoctoral researcher and other employees in need of biostatistical skills within Swedish universities. The materials are geared towards life scientists wanting to be able to understand and use basic statistical and machine learning methods. It may also suits those already applying biostatistical methods but who have never gotten a chance to reflect on the basic statistical concepts, such as the commonly misinterpreted p-value.
 
 More about the course \url{https://nbisweden.github.io/workshop-mlbiostatistics/}
 
@@ -380,6 +380,8 @@ Negative and fractional indices:
   e.g.~\(4^{\frac{1}{2}} = \sqrt{4}\) or \(8^{\frac{1}{3}} = \sqrt[3]{8}\) for fractional indices
 \end{itemize}
 
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
 \hypertarget{exercises-notations}{%
 \section{Exercises: notations}\label{exercises-notations}}
 
@@ -433,8 +435,6 @@ Classify numbers as natural, integers or real. If reall, specify if they are rat
   electron charge
 \end{enumerate}
 \end{exercise}
-
-\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \begin{exercise}
 \protect\hypertarget{exr:m-notations-sigma-product}{}{\label{exr:m-notations-sigma-product} }Write out explicitly what is meant by the following:
@@ -1858,8 +1858,8 @@ Exr. \ref{exr:m-matrix}
 \hypertarget{part-linear-models}{%
 \part{Linear Models}\label{part-linear-models}}
 
-\hypertarget{simple-linear-regression}{%
-\chapter{Simple linear regression}\label{simple-linear-regression}}
+\hypertarget{introduction-to-linear-models}{%
+\chapter{Introduction to linear models}\label{introduction-to-linear-models}}
 
 \textbf{Aims}
 
@@ -2118,6 +2118,23 @@ In R we can use \texttt{lm}, the built-in function, to fit a linear regression m
 \CommentTok{\#\#     0.08572      0.04362}
 \end{Highlighting}
 \end{Shaded}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\hypertarget{exercises-linear-models-i}{%
+\section{Exercises: linear models I}\label{exercises-linear-models-i}}
+
+\begin{exercise}
+\protect\hypertarget{exr:lm-recognize}{}{\label{exr:lm-recognize} }Which of the following models are linear models and why?
+\(Y_i=\alpha + \beta x_i + \epsilon_i\)
+\(Y_i=\beta_0 + \beta_1 x_{i,1} + \beta_2 x_{i,2} + \epsilon_i\)
+\(Y_i=\alpha + \beta x_i + \gamma x_i^2 + \epsilon_i\)
+\(Y_i=\alpha + \gamma x_i^\beta + \epsilon_i\)
+\end{exercise}
+
+\begin{exercise}
+\protect\hypertarget{exr:lm-calculus}{}{\label{exr:lm-calculus} }
+\end{exercise}
 
 \hypertarget{interpreting-regression-coefficients}{%
 \chapter{Interpreting regression coefficients}\label{interpreting-regression-coefficients}}
